--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_room">RoomActivity</string>
+    <string name="ibstheme_tab_room_overview">Room Overview</string>
+    <string name="ibstheme_tab_room_favorit">Favorites</string>
 
 </resources>
