add Room will add in database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,10 @@
     <string name="ibstheme_tab_room_favorit">Favorites</string>
     <string name="title_activity_speaker_acitvity">SpeakerAcitvity</string>
     <string name="button_add_room">Add Room</string>
+    <string name="room_add_headline">Add Room</string>
+    <string name="room_add_width">Room width</string>
+    <string name="room_add_height">Room height</string>
+    <string name="room_add_length">Room length</string>
+    <string name="room_add_name">Room name</string>
 
 </resources>
