--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,10 @@
     <string name="halterungHinzufuegenButton">HALTERUNG HINZUFÜGEN +</string>
     <string name="title_activity_set_up_speaker">SetUpSpeaker</string>
 
-
-
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
     <string name="title_activity_room_detail">RoomDetail</string>
     <string name="button_add_new_room">RAUM HINZUFÜGEN</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
