--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="title_activity_room_detail">RoomDetail</string>
     <string name="button_add_new_room">RAUM HINZUFÜGEN</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="speaker_add_name">Wandhalterung Name</string>
+    <string name="button_add_speaker">Wandhalterung Speichern</string>
 
 </resources>
