--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="speaker_add_name">Wandhalterung Name</string>
     <string name="button_add_speaker">Wandhalterung Speichern</string>
+    <string name="room_add_ip">IP</string>
 
 </resources>
